[feature] switch to more modern and flexible Scala plugin from David Bernard